# trader

./: .env.example  .gitignore  CLAUDE.md  CODING_ASSISTANT.md  CURRENT_STATE.md  README.md  SYSTEM_GUIDE.md  WEEK1_PLAN.md  WEEKBOOK.md  index.html  pyproject.toml
.github/workflows/: reminders.yml  smoke-test.yml  tests.yml  trading.yml
data/: EVOLUTION_REPORT.md  IMPROVEMENT_PROPOSALS.md  dashboard.json  improvement_proposals.json  llm.json  portfolio_state.json  report_monitor.md  report_research.json  research.json  trades.json  validation_report.json
data/context/: 2026-03-21_monitor_165537.json  2026-03-21_monitor_170341.json  2026-03-21_monitor_172235.json  2026-03-21_monitor_192348.json  2026-03-21_monitor_192922.json  2026-03-21_research_165516.json  2026-03-21_research_170308.json  2026-03-21_research_172208.json  2026-03-21_research_172640.json  2026-03-21_research_173211.json  2026-03-21_research_174104.json  2026-03-21_research_174859.json  2026-03-21_research_175318.json  2026-03-21_research_185453.json  latest_monitor.json  latest_research.json
data/research/: 2026-03-21_monitor_1644.json  2026-03-21_monitor_1655.json  2026-03-21_monitor_1704.json  2026-03-21_monitor_1722.json  2026-03-21_monitor_1923.json  2026-03-21_monitor_1929.json  (+7 more)
docs/: ARCHITECTURE.md  KNOWLEDGE_ARCHITECTURE.md  PROMPT_FLOW.md  index.html
gpt_research/: README.md  free_news_and_event_sources.md  spec_macro_and_eval_upgrades.md  spec_news_pipeline_v2.md  status_quo_audit.md
scripts/: collect_all_news.py  run_both.sh  test_news_sources.py
tests/: conftest.py
(+2147 files in other folders)
